<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PSND</string>
    <string name="fileprovider">psnd.fileprovider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="qrcode">QRCode</string>

    <string name="noData">គ្មានទិន័យ</string>
    <string name="noInternetConnection">គ្មានអ៊ីនធើណេត សូមធ្វើការពិនិត្យឡើងវិញ</string>

    <string name="menu_search_staff">ស្វែងរកបុគ្គលិក</string>
    <string name="menu_search">ស្វែងរក</string>
    <string name="menu_user_manager">ការគ្រប់គ្រងអ្នកប្រើប្រាស់</string>
    <string name="menu_about">អំពីកម្មវិធី</string>
    <string name="menu_history">ប្រវត្តិធ្លាប់មើល</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    User Management-->
    <string name="user_info">ព័ត៌អ្នកប្រើប្រាស់</string>
    <string name="add_new_user">បង្កើតគណនី</string>
    <string name="search_user">អត្តលេខ ឬ ឈ្មោះគណនីអ្នកប្រើប្រាស់</string>
    <string name="create">បង្កើតគណនី</string>
    <string name="generate_password">Generate</string>
    <string name="user_role">User\'s role</string>
    <string name="change_user_role">Change user\'s role</string>
    <string name="choose_user_privilege">Choose user\'s privileges</string>
    <string name="choose_user_role">Choose user\'s roles</string>
    <string name="msg_created_user_success">The user has been created successful!</string>
    <string name="active">Active</string>
    <string name="suspend">Suspend</string>
    <string name="date_created">Signup since : %s</string>
    <string name="msg_ask_suspend">Do you want to suspend this user?</string>
    <string name="msg_ask_active">Do you want to active this user?</string>
    <string name="create_user">បង្កើតគណនីអ្នកប្រើប្រាស់</string>
    <string name="create_user_vip">បង្កើតគណនី VIP</string>

    <!--    About-->
    <string name="copyright_by">© រក្សាសិទ្ធដោយ</string>
    <string name="promote_1">ក្រោមការដឹកនាំ</string>
    <string name="promote_2">ឯកឧត្ដម នាយឧត្តមសេនីយ៌ <b>ប៉ែន វិបុល</b></string>

    <!--    SignUp-->
    <string name="OTP_code">OTP code</string>
    <string name="enter_OTP_code">បញ្ចូល OTP code</string>
    <string name="description_OTP">We have sent you a verification code to %s.\nPlease make sure that SIM card is in this device.</string>
    <string name="not_receive_code">Did not receive code?</string>
    <string name="description_put_phone">For your security, PSND wants to make sure it\'s really you. PSND will send a text message with a 6-digit verification code.</string>
    <string name="resend">resend</string>
    <string name="verify_phone_number">ផ្ទៀងផ្ទាត់លេខទូរសព្ទ</string>
    <string name="fill_phone_number_to_verify">បំពេញលេខទូរសព្ទ</string>
    <string name="signup">ចុះឈ្មោះប្រើប្រាស់</string>
    <string name="first_name_khmer">គោត្តនាម (ភាសាខ្មែរ)</string>
    <string name="last_name_khmer">នាម (ភាសាខ្មែរ)</string>
    <string name="staff_id">អត្តលេខ</string>
    <string name="phone_number">លេខទូរសព្ទ</string>
    <string name="first_name_last_name">នាម គោត្តនាម</string>
    <string name="verify">ផ្ទៀងផ្ទាត់</string>
    <string name="waiting">second left</string>
    <string name="code_expired">Expired</string>
    <string name="digit_6">Code 6 digit</string>
    <string name="next">បន្ទាប់</string>
    <string name="back">ត្រលប់ក្រោយ</string>
    <string name="first_name_khmer_error">ត្រូវការ គោត្តនាម</string>
    <string name="last_name_khmer_error">ត្រូវការ នាម</string>
    <string name="staff_id_error">ត្រូវការ អត្តលេខ</string>
    <string name="phone_number_error">ត្រូវការ លេខទូរសព្ទ</string>
    <string name="signup_now">Sign Up Now</string>
    <string name="password_error_incorrect">Password មិនត្រឹមត្រូវ</string>
    <string name="user_already_exists">User already exists</string>
    <string name="msg_scan_wrong_qrcode">សូមពិនិត្យ QR Code ឫ កាតផុតសពុលភាព</string>
    <string name="sign_up_guide_title">របៀបចុះឈ្មោះ</string>
    <string name="sign_up_guide_desc">សូមធ្វើការស្កេន QR Code នៅលើកាតដើម្បីចុះឈ្មោះ</string>

    <!--    Login -->
    <string name="session_expired">Session expired!</string>
    <string name="cancel">បោះបង់</string>
    <string name="ok">យល់ព្រម</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="failed_changed_password">បរាជ័យ សូមធ្វើការពិនិត្យឡើងវិញ</string>
    <string name="failed_limit_changed_password">លើសចំនួនកំណត់នៃការប្ដូរលេខសម្ងាត់ សូមព្យាយាមនៅពេលក្រោយ</string>
    <string name="success_changed_password">លេខសម្ងាត់ត្រូវបានប្ដូរដោយជោគជ័យ</string>
    <string name="successful">ជោគជ័យ</string>
    <string name="not_match">មិនត្រូវគ្នា</string>
    <string name="change_password">ប្ដូរលេខសម្ងាត់</string>
    <string name="change">ប្ដូរ</string>
    <string name="current_password">លេខសម្ងាត់​បច្ចុប្បន្ន</string>
    <string name="new_password">លេខសម្ងាត់ថ្មី</string>
    <string name="confirm_new_password">បញ្ជាក់លេខសម្ងាត់ថ្មី</string>
    <string name="username_eng">Username</string>
    <string name="username">គណនី</string>
    <string name="password">លេខសម្ងាត់</string>
    <string name="forget_password">ភ្លេចលេខសម្ងាត់?</string>
    <string name="label_commissariat">អគ្គស្នងការដ្ឋាននគរបាលជាតិ</string>
    <string name="label_personnel_department">នាយកដ្ឋានបុគ្គលិក</string>
    <string name="label_document_office_personnel_department">ការិយាល័យគ្រប់គ្រង​​ឯកសារ (ក៨)</string>
    <string name="username_error">ត្រូវការ username</string>
    <string name="password_error">ត្រូវការ password</string>
    <string name="password_not_match">Those passwords didn\'t match. Try again.</string>
    <string name="last_login">Last login: %s</string>
    <string name="msg_ask_logout">Do you want to logout?</string>
    <string name="password_eng">Password</string>
    <string name="password_confirm_eng">Confirm password</string>
    <string name="incorrect_username_or_password">ខុសឈ្មោះ ឫ លេខសម្ងាត់</string>

    <string name="labelSearch">អត្តលេខ / ឈ្មោះ</string>
    <string name="search">ស្វែងរក</string>
    <string name="search_filter_title">ស្វែងរកតាមជម្រើស</string>
    <string name="search_detail_label_1">អង្គភាពថ្នាក់ស្មើអគ្គ</string>
    <string name="search_detail_label_2">នាយកដ្ឋានកណ្ដាល</string>
    <string name="search_detail_label_3">នាយកដ្ឋាន/ស្នងការដ្ឋាន</string>
    <string name="search_detail_label_4">ជ្រើសរើសប្រភេទការិយាល័យ</string>
    <string name="search_detail_label_5">ការិយាល័យ/អធិការដ្ឋាន </string>
    <string name="search_detail_label_6">ជ្រើសរើស ផ្នែក/ប៉ុស្តិ៍</string>
    <string name="search_detail_label_7">ផ្នែក/ប៉ុស្តិ៍</string>
    <string name="search_detail_label_8">ឋានន្តរសក្តិ</string>
    <string name="search_detail_label_9">មុខតំណែង</string>

    <!--    History-->
    <string name="history">History</string>

    <!--    Detail-->
    <string name="share">Share</string>
    <string name="screenshot">Take screenshot</string>
    <string name="shareText">Share staff\'s information</string>
    <string name="exportPdf">Export PDF</string>
    <string name="detail_cv_title">ជីវប្រវត្តិមន្ត្រីនគរបាលជាតិ</string>
    <string name="detail_first_name_last_name">គោត្តនាម​ និងនាម</string>
    <string name="detail_first_name_last_name_latin">អក្សរឡាតាំង</string>
    <string name="detail_full_name">ឈ្មោះ</string>
    <string name="detail_staff_info">ព័ត៌មានលំអិតរបស់លោក %s</string>
    <string name="detail_label_0">អង្គភាពថ្នាក់ស្មើអគ្គ</string>
    <string name="detail_label_1">ឋានន្តរសក្តិ</string>
    <string name="detail_label_2">មុខតំណែង</string>
    <string name="detail_label_3">ថ្នាក់ស្មើនាយកដ្ឋាន</string>
    <string name="detail_label_4">ថ្នាក់ស្មើការិ</string>
    <string name="detail_label_5">ថ្នាក់ស្មើផ្នែក/ប៉ុស្តិ៍</string>
    <string name="detail_label_6">ស្ថានភាពការងារ</string>
    <string name="detail_label_7">ភេទ</string>
    <string name="detail_label_8">ឆ្នាំកំណើត</string>
    <string name="detail_label_9">កម្រិតវប្បធម៍</string>
    <string name="detail_label_10">ជំនាញ</string>
    <string name="detail_label_11">ទូរស័ព្ទ</string>
    <string name="detail_label_12">អាស័យដ្ឋាន</string>
    <string name="detail_label_13">ឋានៈ</string>
    <string name="detail_label_14">អង្គភាព</string>

    <!--    Detail Tab-->
    <string name="detail_label_tab_1">ព័ត៌មានផ្ទាល់ខ្លួន</string>
    <string name="detail_label_tab_2">កម្រិតវប្បធម៍</string>
    <string name="detail_label_tab_3">ភាសាបរទេស</string>
    <string name="detail_label_tab_4">កម្រិតបណ្តុះបណ្តាលវិជ្ជាជីវ</string>
    <string name="detail_label_tab_5">ប្រវត្តិការងារ</string>
    <string name="detail_label_tab_6">ការលើកសរសើរ</string>
    <string name="detail_label_tab_7">ប្រវត្តិដាក់វិន័យ</string>
    <string name="detail_label_tab_8">ព័ត៌មានគ្រួសារ</string>

    <string name="detail_header_2">លេខឯកសារ</string>
    <string name="detail_header_3">កាលបរិច្ឆេទ</string>
    <string name="detail_label_change_position">ផ្ទេរភារៈកិច្ច</string>
    <string name="detail_label_skill_header">កម្រិតបណ្តុះបណ្តាលវិជ្ជាជីវៈ</string>
    <string name="detail_label_skill">ជំនាញ</string>
    <string name="detail_label_department">គ្រឹះស្ថាន</string>
    <string name="detail_label_praise">ការលើកសរសើរ</string>
    <string name="detail_label_announce_number">លិខិត-ប័ណ្ណ-មេដាយ</string>
    <string name="detail_label_follow_by">ធ្វើតាមរយៈ</string>
    <string name="detail_label_due_country">%s \nរយៈពេល%s\n%sប្រទេស</string>


    <string name="change_staff_photo">ប្ដូររូបភាព</string>

    <!--    Profile-->
    <string name="user_id">អត្តលេខ : %s</string>
    <string name="personal_information">ព័ត៌មានផ្ទាល់ខ្លួន</string>
    <string name="language_choice">ជ្រើសរើសភាសា</string>
    <string name="language_khmer">Khmer</string>
    <string name="language_english">English</string>
    <string name="security">Security</string>
    <string name="enable_fingerprint">Enable fingerprint</string>
    <string name="auto_logout_after">Auto-logout after</string>
    <string name="second_30">30 seconds</string>
    <string name="minute_1">1 minute</string>
    <string name="minute_2">2 minutes</string>
    <string name="minute_3">3 minutes</string>

    <string name="fingerprint_title">Verify your identity</string>
    <string name="fingerprint_description">Use your fingerprint to verify your identity</string>
    <string name="qrcode_description">Scan QR Code on the card</string>
    <string name="qrcode_signup">Scan QR Code on the card to Sign Up</string>

    <!--    PDF-->
    <string name="file_not_found">មិនមានទិន្នន័យ!</string>
</resources>