<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_black_24"
            android:title="@string/menu_search_staff" />
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_user_group"
            android:title="@string/menu_user_manager" />
        <!--        <item-->
        <!--            android:id="@+id/nav_history"-->
        <!--            android:icon="@drawable/ic_outline_history_24"-->
        <!--            android:title="@string/menu_history" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_about" />
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>