<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="label_1, label_2,label_3, label_4,label_5, label_6,label_7, label_8,label_9, label_10"
            app:layout_constraintTop_toTopOf="parent" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_1"
            style="@style/DetailLabel"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:text="@string/detail_label_1"
            app:layout_constraintBottom_toBottomOf="@id/value_label_1"
            app:layout_constraintEnd_toStartOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_2"
            style="@style/DetailLabel"
            android:text="@string/detail_label_2"
            app:layout_constraintBottom_toBottomOf="@id/value_label_2"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_1" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_3"
            style="@style/DetailLabel"
            android:text="@string/detail_label_3"
            app:layout_constraintBottom_toBottomOf="@id/value_label_3"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_2" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_4"
            style="@style/DetailLabel"
            android:text="@string/detail_label_4"
            app:layout_constraintBottom_toBottomOf="@id/value_label_4"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_3" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_5"
            style="@style/DetailLabel"
            android:text="@string/detail_label_5"
            app:layout_constraintBottom_toBottomOf="@id/value_label_5"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_4" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_6"
            style="@style/DetailLabel"
            android:text="@string/detail_label_6"
            app:layout_constraintBottom_toBottomOf="@id/value_label_6"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_5" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_7"
            style="@style/DetailLabel"
            android:text="@string/detail_label_7"
            app:layout_constraintBottom_toBottomOf="@id/value_label_7"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_6" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_8"
            style="@style/DetailLabel"
            android:text="@string/detail_label_8"
            app:layout_constraintBottom_toBottomOf="@id/value_label_8"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_7" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_9"
            style="@style/DetailLabel"
            android:text="@string/detail_label_9"
            app:layout_constraintBottom_toBottomOf="@id/value_label_9"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_8" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_10"
            style="@style/DetailLabel"
            android:text="@string/detail_label_10"
            app:layout_constraintBottom_toBottomOf="@id/value_label_10"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_9" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_11"
            style="@style/DetailLabel"
            android:text="@string/detail_label_11"
            app:layout_constraintBottom_toBottomOf="@id/value_label_11"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_10" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_12"
            style="@style/DetailLabel"
            android:text="@string/detail_label_12"
            app:layout_constraintBottom_toBottomOf="@id/value_label_12"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_11" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_13"
            style="@style/DetailLabel"
            android:text="@string/detail_label_13"
            app:layout_constraintBottom_toBottomOf="@id/value_label_13"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_12" />

        <core.lib.widget.MyTextView
            android:id="@+id/label_14"
            style="@style/DetailLabel"
            android:text="@string/detail_label_14"
            app:layout_constraintBottom_toBottomOf="@id/value_label_14"
            app:layout_constraintStart_toStartOf="@id/label_1"
            app:layout_constraintTop_toBottomOf="@id/label_13" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_1"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_1"
            tools:text="អនុសេនីយ៍ត្រី" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_2"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_2"
            tools:text="នាយកដ្ឋានបុគ្គលិក" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_3"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_3"
            tools:text="29/05/1987" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_4"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_4"
            tools:text="ប្រុស" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_5"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_5"
            tools:text="នាយកដ្ឋានបុគ្គលិក" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_6"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_6"
            tools:text="ការិយាល័យគ្រប់គ្រងឯកសារ" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_7"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_7"
            tools:text="នាយផ្នែក" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_8"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_8"
            tools:text="អនុសេនីយ៍ត្រី" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_9"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_9"
            tools:text="មន្រ្តី" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_10"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_10"
            tools:text="បំរើការងារ" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_11"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_11"
            tools:text="បរិញ្ញាប័ត្រ" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_12"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_12"
            tools:text="Asia Pacific International University៊ី" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_13"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_13"
            tools:text="099990202" />

        <core.lib.widget.MyTextView
            android:id="@+id/value_label_14"
            style="@style/DetailValueLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/label_14"
            tools:text="ផ្ទះលេខ ១២៥ហ្ស៊ី, ផ្លូវ២៥៥ហ្សិត,​​​ ភូមិ៣, សង្កាត់បឹងសាឡាង, ខណ្ឌទួលគោក,​ រាជធានីភ្នំពេញ៊ី" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>