<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_26dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/textViewHeaderColor"
                android:textSize="@dimen/text_size_29sp"
                app:fontFamily="@string/font_family_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AppDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16dp"
                android:hint="@string/first_name_khmer"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/textViewHeaderColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AppDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_08dp"
                android:hint="@string/last_name_khmer"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/textViewHeaderColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutStaffNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AppDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_08dp"
                android:hint="@string/staff_id"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/staffNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/textViewHeaderColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AppDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_08dp"
                android:hint="@string/phone_number"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/textViewHeaderColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_08dp"
                android:paddingBottom="@dimen/space_08dp"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="invisible"
                tools:text="@string/signup_now"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerify"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Default"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginTop="@dimen/space_08dp"
                android:text="@string/verify"
                android:textColor="@color/textViewHeaderColor"
                app:rippleColor="@color/colorPrimary" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>